--- a/portfolio_glassart/CSS/style.css
+++ b/portfolio_glassart/CSS/style.css
@@ -40,6 +40,7 @@ main > section {
   position: relative;
   display: inline-block;
   transition: color 0.6s ease-out;
+  padding-bottom: 3px;
 }
 .header_pc_nav {
   max-width: 1000px;
@@ -148,7 +149,7 @@ h4 {
   height: 440px;
 }
 .footer_era {
-  padding-top: 300px;
+  padding-top: 250px;
   background-image: url("../img/wave_main.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -168,6 +169,29 @@ h4 {
 }
 .footer_a li {
   margin: 0 10px;
+}
+.footer_nav a {
+  position: relative;
+}
+
+.footer_nav a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(91, 87, 62, 70);
+  width: 100%;
+  height: 1px;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: transform 0.5s ease-out;
+  /*opacity: 0;
+  transition: opacity 0.6s ease-out; 下線がふわっと出るタイプ*/
+}
+.footer_nav a:hover::after {
+  transform: scale(1, 1);
+  transform: right top;
+  /*opacity: 1;  下線がふわっと出るタイプ*/
 }
 .sns_rnk {
   display: flex;
@@ -199,30 +223,54 @@ h4 {
   .header_pc_nav {
     display: none;
   }
-
+  .header_sp_nav {
+    display: block;
+  }
+  .header_logo {
+    font-family: "Hubballi";
+    font-size: 19px;
+    font-weight: normal;
+    padding-top: 30px;
+    padding-left: 22px;
+    white-space: nowrap;
+  }
   /*ハンバーガーメニューエリア*/
   .sp_btn {
     display: block;
-
     height: 23px;
     cursor: pointer;
-    z-index: 5;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 
-  /*.home_sp_circle {
+  .home_sp_circle {
     z-index: 5;
-    width: 100%;
+    width: 130%;
     overflow-x: hidden;
     position: relative;
+    height: 100vh;
+  }
+  .home_sp_circle img {
+    transform: rotate(0deg);
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 110%;
+    max-width: 1100px;
+    min-width: 1100px;
+    max-height: 860px;
   }
   .sp_btn span {
     display: block;
     width: 33px;
-    height: 3px;
+    height: 1px;
     border-radius: 2px;
-    background: #fff;
+    background: #5b573e;
     position: relative;
-    top: 10px;
+    top: 45px;
+    right: 70%;
     transition: 0.3s;
   }
   .sp_btn span::before,
@@ -230,20 +278,20 @@ h4 {
     content: "";
     display: block;
     width: 33px;
-    height: 3px;
+    height: 1px;
     border-radius: 2px;
-    background: #fff;
+    background: #5b573e;
     position: absolute;
     transition: 0.3s;
   }
   .sp_btn span::before {
-    bottom: 10px;
+    bottom: 12px;
   }
   .sp_btn span::after {
-    top: 10px;
+    top: 12px;
   }
-  */
-  /*ばつ印
+
+  /*ばつ印 */
   .sp_btn.open span {
     background: transparent;
   }
@@ -256,42 +304,43 @@ h4 {
     transform: rotate(135deg);
   }
   .header_sp_nav {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     background: #8b8c8c;
     z-index: 4;
   }
   .header_sp_nav.active {
-    display: flex; 
+    display: flex;
   }
   .header_sp_nav ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-right: 20%;
     height: 100%;
   }
   .header_sp_nav li {
-    padding: 20px;
-    color: #fff;
+    margin: 20px;
+    padding-bottom: 3px;
+    color: #5b573e;
     font-family: "Zen Kaku Gothic Antique", "Hubballi", "游ゴシック",
       "YuMGothic", "Hiragino Mincho ProN W3", "ヒラギノ角ゴ", "HiraKaku";
     font-weight: lighter;
     font-size: 14px;
     position: relative;
   }
-  .header_sp_nav a {
-    position: relative; 
-  }
+
   .header_sp_nav a::after {
     content: "";
     position: absolute;
     left: 0;
     bottom: 0;
-    background-color: #fff;
+    background-color: #5b573e;
     width: 100%;
     height: 1px;
     transform: scale(0, 1);
@@ -306,10 +355,9 @@ h4 {
     max-width: 100%;
     width: 100%;
   }
-}
-*/
+
   main {
-    max-width: 767px;
+    max-width: 1000px;
     margin: 0 auto;
   }
   .container_glass {
@@ -320,15 +368,13 @@ h4 {
 
   .item {
     margin: 0 auto;
-    margin: 10px;
-    padding: 10px;
     padding-bottom: 20px;
     box-sizing: border-box;
   }
 
   .item img {
-    max-width: 500px;
-    width: 200%;
+    max-width: 400px;
+    width: 100%;
     align-items: center;
   }
 }
@@ -371,6 +417,7 @@ h4 {
   main {
     max-width: 767px;
     margin: 0 auto;
+    width: 100%;
   }
 
   .works_title {
@@ -394,20 +441,12 @@ h4 {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  .item {
-    margin: 0 auto;
-    margin: 10px;
-    padding: 10px;
-    padding-bottom: 20px;
-    box-sizing: border-box;
+    margin-left: 50%;
   }
 
   .item img {
-    max-width: 400px;
-    width: 200%;
-
+    max-width: 350px;
+    width: 100%;
     align-items: center;
   }
 
@@ -446,7 +485,7 @@ h4 {
   /*フッターエリア*/
   .footer_era {
     background-image: url("../img/wave_sp_bl@2x.png");
-    padding-top: 40px;
+    padding-top: 0px;
     background-size: cover;
   }
   .footer {
@@ -459,7 +498,7 @@ h4 {
     font-size: 12px;
     justify-content: center;
     white-space: nowrap;
-    padding-top: 20px;
+    padding-top: 62px;
   }
   .footer_a li {
     margin: 25px 25px 25px;
