--- a/portfolio_glassart/CSS/style.css
+++ b/portfolio_glassart/CSS/style.css
@@ -441,11 +441,16 @@ h4 {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    margin-left: 50%;
+  }
+
+  .item {
+    margin: 0 auto;
+    padding-bottom: 20px;
+    box-sizing: border-box;
   }
 
   .item img {
-    max-width: 350px;
+    max-width: 500px;
     width: 100%;
     align-items: center;
   }
